@@ -693,6 +693,18 @@ Olimex LPC1766-STK Configuration Options
 	CONFIG_UARTn_PARTIY - 0=no parity, 1=odd parity, 2=even parity
 	CONFIG_UARTn_2STOP - Two stop bits
 
+  LPC17xx specific CAN device driver settings.  These settings all
+  require CONFIG_CAN:
+
+	CONFIG_CAN1_BAUD - CAN1 BAUD rate.  Required if CONFIG_LPC17_CAN1 is defined.
+	CONFIG_CAN2_BAUD - CAN1 BAUD rate.  Required if CONFIG_LPC17_CAN2 is defined.
+	CONFIG_CAN1_DIVISOR - CAN1 is clocked at CCLK divided by this number.
+	  (the CCLK frequency is divided by this number to get the CAN clock).
+	  Default: 4
+	CONFIG_CAN2_DIVISOR - CAN2 is clocked at CCLK divided by this number.
+	  (the CCLK frequency is divided by this number to get the CAN clock).
+	  Default: 4
+
   LPC17xx specific PHY/Ethernet device driver settings.  These setting
   also require CONFIG_NET and CONFIG_LPC17_ETHERNET.
 
